impr: use new java 21 concepts