@@ -17,7 +17,7 @@ public interface F2FStaticFunc extends StaticFunc {
     @Nullable
     default Value apply(@NotNull List<Value> params) {
         if (params.size() == 1 &&
-                params.get(0) instanceof Value.KnownFloatValue a)
+                params.getFirst() instanceof Value.KnownFloatValue a)
             return Values.valueOf(apply(a.value()));
         return Values.FLOAT_VALUE;
     }
