@@ -16,7 +16,7 @@ public interface I2StringStaticFunc extends StaticFunc {
     @Override
     @Nullable
     default Value apply(@NotNull List<Value> params) {
-        if (params.size() == 1 && params.get(0) instanceof Value.KnownIntValue a) {
+        if (params.size() == 1 && params.getFirst() instanceof Value.KnownIntValue a) {
             String value = apply(a.value());
             if (value != null)
                 return Values.valueOfString(value);
