@@ -16,7 +16,7 @@ public interface J2JStaticFunc extends StaticFunc {
     @Override
     @Nullable
     default Value apply(@NotNull List<Value> params) {
-        if (params.size() == 1 && params.get(0) instanceof Value.KnownLongValue a)
+        if (params.size() == 1 && params.getFirst() instanceof Value.KnownLongValue a)
             return Values.valueOf(apply(a.value()));
         return Values.LONG_VALUE;
     }
